# ITlib

./: Doxyfile  ITlib.files  ITlib.includes  Makefile.am  README  README.md  configure.ac
examples/: Makefile.am  itlib.c  itlib.h
src/: Makefile.am
src/engine/: Makefile.am  engine.c  engine.h
src/filters/: Makefile.am  filters.c  filters.h
src/hdr/: Makefile.am  hdr.c  hdr.h
src/libit/: types.h
src/motion/: Makefile.am  alg.h  alg_motion.c  alg_motion.h  motion.c  motion.h  osa.h
src/segmentation/: Makefile.am  segmentation.c  segmentation.h
src/stereo/: Makefile.am  stereo.c  stereo.h
src/trans/: Makefile.am  trans.c  trans.h
src/transforms/: Makefile.am  transforms.c  transforms.h
src/utils/: Makefile.am  utils.c  utils.h
