AM_CPPFLAGS = -I$(top_srcdir)/src
noinst_LTLIBRARIES = libittransforms.la

libittransforms_la_SOURCES =
libittransforms_la_SOURCES += transforms.c transforms.h

#libitutilsinclude_HEADERS =
#libitutilsinclude_HEADERS += ../libit/types.h

#libitutilsincludedir = $(includedir)/libit
#noinst_HEADERS =
